<resources>
    <!-- Private -->
    <string name="introConfiguration" translatable="false">intro</string>
    <string name="runIntro">runIntro</string>
    <string name="campusConfiguration" translatable="false">campusConfiguration</string>
    <string name="campusId" translatable="false">campusId</string>
    <string name="serverURL" translatable="false">https://penelope.barillari.me:8080/</string>
    <string name="campusesList" translatable="false">campus/list</string>
    <string name="birdsList" translatable="false">campus/%d</string>
    <string name="testingUrl" translatable="false">testingUrl</string>
  
    <!-- Intro -->
    <string name="welcome">Welcome to Fauna Finder!</string>
    <string name="home_page">Home Page</string>
    <string name="main_empty_usage">On the Home screen you can select the University that you want to see wildlife from. This can be done by selecting the icon in the top left of the screen.</string>
    <string name="campus_selection">Campus Selection</string>
    <string name="campus_select_usage">Search for the campus using the search bar or selecting from the list</string>
    <string name="pick_fauna">Pick a Fauna</string>
    <string name="bird_selection_usage">Select the fauna you would like to identify and learn about from either searching using the search bar or selecting from the list</string>
    <string name="info">Information</string>
    <string name="info_pages1">Here you can see the information on the wildlife. click on the icon on in the top right to hear what they sound like. tap the drop downs to see more information</string>
    <string name="about_me">About me</string>
    <string name="about_me_info">In the about me section you can see general information as well as a useful video showing the selected wildlife</string>
    <string name="diet">Diet</string>
    <string name="diet_info">In the diet section you can see a real life image of the wildlife and also learn about its diet</string>
    <string name="location">Location</string>
    <string name="location_info">In the Location section you can see more images as well as information about where you may find this wildlife on your campus</string>
    <string name="luck">Good Luck Finding your Fauna!</string>

    <!-- Main activity -->
    <string name="app_name">Fauna Finder</string>
    <string name="home_title">Home</string>
    <string name="action_about">About the app</string>

    <!-- Ducks list -->
    <string name="ducks_list_content_description">%s image</string>
    <string name="load_duck_content_description">Load duck information from local storage</string>
    <string name="select_location">Please select a University from the location menu</string>

    <!-- Campus selection activity -->
    <string name="campus_selection_title">Select a campus</string>

    <!-- Bird detail -->
    <string name="expand_section">Expand section</string>
    <string name="play_pause">Play/Pause Button</string>


    <!-- Common -->
    <string name="refresh">Refresh</string>
    <string name="error">Error</string>
    <string name="network_problem">Something went wrong reaching the server. Please try again.</string>

    <!-- About us -->
    <string name="aboutCreatorsText">
    <![CDATA[
Penelope was founded in the UK at the University of York in 2022 by a group of students who were passionate about creating high-quality android applications. They started the organisation from the ground up, focusing on building a team that was dedicated to innovation, collaboration, and customer satisfaction. Today, Penelope is a thriving company that continues to embody these values. We believe that effective project management is crucial to our success, and we use a variety of strategies to facilitate innovation and communication in the work environment. Our goal is to provide our customers with a product that is not only functional but also visually appealing and easy to use. We also strive to create a work environment where our employees can grow and develop their skills, and where they feel proud to be part of our team.

Our current ongoing goal has been the development and sale an educational Android application to provide students of campus-based universities, and local members of the public, a means of identifying and learning about the local wildlife. By providing potential future students with information on the wildlife that exists on campus, we are giving them the opportunity to fall in love with the university even prior to beginning their studies.

    ]]>
    </string>
    <string name="version">Version 1.0.0</string>
    <string name="how_to_use_the_app">How to use the app</string>
    <string name="logo">logo</string>
    <string name="penelope_copyright">© 2023 Penelope LTD</string>
    <string name="creators_title">About the creators</string>
    <string name="app_usage_title">How to use the app</string>
    <string name="licensing_title">Licensing</string>
</resources>